syntax = "proto3";
package rube;


message Vector {
  double x = 1;
  double y = 2;
}

message VectorArray {
  repeated double x = 1;
  repeated double y = 2;
}

message CustomProperty {
  string name = 1;

  oneof value {
    int32 int = 2;
    double float = 3;
    string string = 4;
    string color = 5; 
    bool bool = 6;
    Vector vec2 = 7;
  }
}

message ComboBoxEntry {
  string entry = 1;
}

message CustomPropertyDef {
  string class = 1;
  string type = 2;
  string name = 3;
  string displayName = 4;
  repeated ComboBoxEntry comboboxEntries = 5;
}
 
/////////////////////////////////////////////////////////////////7

// Merged shape types into one for easier handling
message Shape {
  string type = 1;
  optional double radius = 2; // Part of MetaCircleShape
  optional bool hasNextVertex = 3; // Part of MetaLoopShape
  optional bool hasPrevVertex = 4; // Part of MetaLoopShape
  optional Vector nextVertex = 5; // Part of MetaLoopShape
  optional Vector prevVertex = 6; // Part of MetaLoopShape
}

message MetaFixture {
  int32 id = 1;
  optional string name = 2;
  optional double density = 3;
  optional int32 filterCategoryBits = 4;
  optional int32 filterMaskBits = 5;
  optional int32 filterGroupIndex = 6;
  optional double friction = 7;
  optional double restitution = 8;
  optional bool sensor = 9;
  VectorArray vertices = 10;
  repeated Shape shapes = 11;
  repeated CustomProperty customProperties = 12;
}

//////////////////////////////////////

message MetaBody {
  int32 id = 1;
  string name = 2;
  optional bool active = 3;
  optional bool awake = 4;
  optional bool bullet = 5;
  optional bool fixedRotation = 6;
  optional bool sleepingAllowed = 7;
  optional string type = 8;
  optional Vector position = 9;
  optional double angle = 10;
  optional double angularDamping = 11;
  optional double angularVelocity = 12;
  optional double linearDamping = 13;
  optional Vector linearVelocity = 14;
  optional double massDataMass = 15;
  optional Vector massDataCenter = 16;
  optional double massDataI = 17;
  repeated MetaFixture fixture = 18;
  repeated CustomProperty customProperties = 19;
}

///////////////////////////////////

message MetaImage {
  int32 id = 1;
  string name = 2;
  optional double angle = 3;
  optional int32 body = 4;
  optional Vector center = 5;
  optional string file = 6;
  optional int32 filter = 7;
  optional bool flip = 8;
  optional double opacity = 9;
  optional double renderOrder = 10;
  optional double aspectScale = 11;
  optional double scale = 12;
  repeated CustomProperty customProperties = 13;
}

///////////////////////////////////

message MetaObject {
  int32 id = 1;
  string file = 2;
  optional string name = 3;
  optional string path = 4;
  optional bool flip = 5;
  optional double angle = 6;
  optional double scale = 7;
  optional Vector position = 8;
  repeated CustomProperty customProperties = 9;
}

///////////////////////////////////

message ExportOptions {
  bool compactCommonFloats = 1;
  bool compactZeroVecs = 2;
  bool saveFullPathForImages = 3;
  bool saveFullPathForSamplerOutput = 4;
  bool saveImagePathsRelativeToRUBEFile = 5;
  bool saveSamplerOutputPathsRelativeToRUBEFile = 6;
  bool useGsonFormat = 7;
  bool useHumanReadableFloats = 8;
  bool usePrettyPrint = 9;
}

//////////////////////////////////

message MetaWorld {
  Vector gravity = 1;
  bool allowSleep = 2;
  bool autoClearForces = 3;
  int32 positionIterations = 4;
  int32 velocityIterations = 5;
  int32 stepsPerSecond = 6;
  bool warmStarting = 7;
  bool continuousPhysics = 8;
  bool subStepping = 9;

  repeated MetaBody metabody = 10;
  repeated MetaImage metaimage = 11;
  // repeated MetaJoint metajoint = 12;
  repeated MetaObject metaobject = 13;

  ExportOptions exportOptions = 14;
}

message RubeFile {
  repeated CustomPropertyDef customPropertyDefs = 1;
  MetaWorld metaworld = 2;
}
